--- a/webtools/despot/help.html
+++ b/webtools/despot/help.html
@@ -57,7 +57,7 @@ For each user, we also record:
        <ul>
 	 <li> <b>None</b> -- not allowed to use this repository at
 	      all.
-	 <li> <b>webmonkey</b> -- normal usage.
+	 <li> <b>cvsuser / webmonkey</b> -- normal usage.
 	 <li> <b>cvsadm</b> -- can access the entire CVS repository,
 	      including all the administrative stuff in CVSROOT.
        </ul>
